coded-services/quarkus-opentracing/ISTIO-YAML/hello-traced-quarkus-deployment-with-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-hello-traced-quarkus-service
  annotations:
    "sidecar.jaegertracing.io/inject": "jaeger-production"
spec:
  selector:
    matchLabels:
      app: deployment-hello-traced-quarkus-service
  template:
    metadata:
      labels:
        app: deployment-hello-traced-quarkus-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: hello-traced-quarkus-service
        image: quay.io/skoussou/quarkus-opentracing:v1.0.0
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http-hello
        command:
          - java
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: File
        args:
          - '-jar'
          - /deployments/quarkus-run.jar
          - '-cp'
          - >-
            /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.12.0.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-http-dev-console-runtime-spi-1.12.0.Final.jar:/deployments/lib/io.smallrye.reactive.mutiny-0.13.0.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.3.Final.jar:/deployments/lib/io.netty.netty-codec-4.1.49.Final.jar:/deployments/lib/io.netty.netty-handler-4.1.49.Final.jar:/deployments/lib/io.quarkus.quarkus-netty-1.12.0.Final.jar:/deployments/lib/io.netty.net [...]
          - '-Dquarkus.http.host=0.0.0.0'
          - '-Djava.util.logging.manager=org.jboss.logmanager.LogManager'
---
kind: Service
apiVersion: v1
metadata:
  name: deployment-hello-traced-quarkus-service
spec:
  ports:
    - name: http-hello
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: deployment-hello-traced-quarkus-service
  type: ClusterIP
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: opentracing-hello
spec:
  hosts:
    - '*'
  gateways:
    - opentracing-hello-gateway
  http:
    - match:
        - uri:
            exact: /chain
        - uri:
            exact: /hello
      route:
        - destination:
            host: deployment-hello-traced-quarkus-service
            port:
              number: 8080
---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: opentracing-hello-gateway
spec:
  servers:
    - hosts:
        - '*'
      port:
        name: deployment-http-hello-traced-quarkus-service
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
